# job-market-agent

./: .env.example  README.md  pyproject.toml  requirements.txt
job_market_agent/: __init__.py  agent.py  setup_db.py
